# invest_top

./: .env  .env.example  .env.prod  .env.prod.db  .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  DEPLOYMENT_TIMEWEB.md  Dockerfile  README.md  bot_schema.txt  check_bot.py  docker-compose.prod.yml  docker-compose.yml  frontendga_dokument.MD  main.py  manage.py  pyproject.toml  requirements.txt  schema.yml  schemas.sql  send_pending_signals.py  test_signal.py  text.text
apps/: urls.py
apps/dashboard/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/instruments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/invest_bot/: apps.py  bot.py  bot_config.py  handlers.py  loader.py  run.py  urls.py  views.py
apps/payments/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
instruments/: admin.py  models.py  serializers.py  urls.py  views.py
invest_bot/: apps.py  bot.py  bot_config.py  handlers.py  run.py
nginx/: default.conf
payments/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
signals/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
tests/: test_users.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+101 files in other folders)
