[project]
name = "backend"
version = "0.1.0"
description = "Top Invest backend project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django",
    "django-filter",
    "djangorestframework",
    "drf-spectacular",
    "python-dotenv",
    "aiogram==2.25.1",
    "pillow",
    "whitenoise",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
